# GithubTopUsers

./: .gitignore  .gitmodules  .travis.yml  README.md  build.gradle  build.gradle.kts  ci-before-script.sh  gradle.properties  settings.gradle  settings.gradle.kts
app/: build.gradle  build.gradle.kts  proguard-dagger.pro  version.properties
app/release/: app-release.apk
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  client.properties  root.cpp  root.h
app/src/main/res/drawable/: dialog_background.xml
app/src/main/res/layout/: activity_submit_log.xml  content_app_bar.xml  content_search.xml  content_search_bar.xml  content_toolbar.xml  details_fragment.xml  login_content.xml  main_fragment.xml  profile_content.xml  row_log_preview.xml  row_user.xml  view_footer_progress_bar.xml
app/src/main/res/values-ru-rRU/: strings.xml
app/src/main/res/values-uk/: strings.xml
buildSrc/src/main/kotlin/: Dependencies.kt  Modules.kt  TestDependencies.kt  Versions.kt
common/: build.gradle
common/src/main/: AndroidManifest.xml
commonAndroid/: build.gradle  build.gradle.kts
commonAndroid/src/main/: AndroidManifest.xml
commonKotlin/: build.gradle  build.gradle.kts
core/: build.gradle  build.gradle.kts
core/src/main/: AndroidManifest.xml
data/: build.gradle  build.gradle.kts
data/src/main/: AndroidManifest.xml
domain/: build.gradle  build.gradle.kts
domain/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
network/: build.gradle  build.gradle.kts
network/src/main/: AndroidManifest.xml
(+262 files in other folders)
